fixed issues with pie chart not working on chrome

--- a/frontend/src/app/pie-chart/pie-chart.component.html
+++ b/frontend/src/app/pie-chart/pie-chart.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <figure id="pie">
-    <svg #pieChart></svg>
+    <svg #pieChart>
+    </svg>
   </figure>
   <div class="button-container">
     <button class="button" (click)="reloadData()">New Pie Chart</button>
