--- a/frontend/src/app/model/model.component.html
+++ b/frontend/src/app/model/model.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   
-  <video id="video" width="320" height="240" autoplay loop muted controls preload="auto">
+  <video id="video" width="320" height="240" autoplay loop controls preload="auto">
     <source src="../../assets/rick.mp4" type="video/mp4">
   </video>
   <router-outlet></router-outlet>
