--- a/frontend/src/app/pie-chart/pie-chart.component.scss
+++ b/frontend/src/app/pie-chart/pie-chart.component.scss
@@ -7,10 +7,7 @@
   height: 100%;
   figure {
     width: 100%;
-    svg {
-      width: 100%;
-      height: auto;
-    }
+    height: 100%;
   }
   .button-container {
     position: fixed;
